# canvas-student-mcp

./: .gitignore  README.md
src/canvas-student/: .env.example  .gitignore  README.md  canvas_student.py  install.py  main.py  pyproject.toml  requirements.txt  run_server.py  setup.py
src/canvas-student/tools/: __init__.py  api_client.py  assignments.py  canvas_client.py  content.py  courses.py  file_content.py  quizzes.py  search.py  todos.py  utils.py
